# MineInasx

./: .replit  keystore_base64.txt  mineinasx-release.jks  pubspec.yaml
.github/workflows/: android_build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  enx_security.cpp
android/app/src/main/kotlin/com/mineinasx/app/: MainActivity.kt
android/app/src/main/kotlin/com/mineinasx/workspace/: MainActivity.kt
file/: .replit  keystore_base64.txt  replit.nix
file/android/: build.gradle
file/android/app/: build.gradle
file/android/app/src/main/: AndroidManifest.xml
file/android/app/src/main/kotlin/com/inasx/app/: MainActivity.kt
lib/: main.dart
lib/core/network/: inasx_network.dart
lib/core/security/: cryptography.dart  enx1_9.dart  enx_base.dart  enx_security.dart  enx_segurity.dart
lib/screens/: doc_create.dart  initiation.dart  splashscreen.dart  started.dart
